--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "mongoose": "^8.15.1",
     "multer": "^2.0.1",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.10",
     "socket.io": "^4.8.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
