--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
+    "start": "node src/app.js",
     "app": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
