--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,7 @@
   "main": "src/app.js",
   "type": "module",
   "scripts": {
-    "start": "node src/app.js",
-<<<<<<< HEAD
-    "app": "node src/app.js",
-=======
->>>>>>> c41f84527d2edbe1fac4f318b3d83d05af0c4fec
-    "dev": "nodemon src/app.js"
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "Zoheb",
